# ed-finder

./: .dockerignore  .gitignore  .replit  .tmp-colonisation-access-tree-probe  CHANGES.md  CLAUDE.md  DEPLOY.sh  DEPLOY_COMMANDS.txt  ED_FINDER_JOURNAL_IMPORT_AND_COLONISATION_ROUTING_DESIGN_V1.md  KNOWN_ISSUES.md  Makefile  ONE_COMMAND_DEPLOY.txt  PACKAGE_INFO.md  QUICK_START.md  README.md  SCP_COMMANDS.txt  SOLUTION_SUMMARY.md  THIRD_PARTY_NOTICES.md  ULTIMATE_FIX.sh  docker-compose.local.yml  docker-compose.review-hosted.yml  docker-compose.review.yml  docker-compose.yml  env.example  implementation_plan_stage_4a.md  nginx.conf  pyproject.toml  replit.md  setup.sh
.agents/: agent_assets_metadata.toml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  Dockerfile  Dockerfile.import  build_clusters.py  build_grid.py  build_ratings.py  config.py  deps.py  eddn_listener.py  exploration_value.py  fix_index.py  import_spansh.py  inara_api.py  local_search.py  main.py  models.py  requirements.txt  share_router.py
config/: nginx-ci.conf  nginx.conf  postgres_exporter_queries.yaml  prometheus.yml  security-headers.conf
docs/: DOCUMENTATION_INDEX.md  GRID_SLOWDOWN_MITIGATION.md  HISTORICAL_RECORDS_INDEX.md  README.md  ROADMAP.md  SCHEMA_AND_REFACTOR_ADVISORY.md  api-contracts.md
frontend/: .gitignore  50x.html  README.md  app.js  index.html  knip.json  package.json  playwright.bakeoff.config.ts  playwright.config.ts  playwright.map-foundation.accessibility.config.ts  playwright.map-foundation.config.ts  playwright.map-foundation.matrix.config.ts  playwright.map-foundation.visual.config.ts  playwright.stage26e-route.config.ts  style.css  sw.js  tailwind.config.js  tsconfig.json  vite.authoritative-regions.ts  vite.bakeoff.config.ts  vite.concept-mockups.config.ts  vite.config.ts  vite.map-foundation.config.ts
frontend-v2/: .gitignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
hetzner/: README.md  docker-compose.yml  setup.sh
localdb/: audit.py  eddn_listener.py  import_systems.py  local_search.py  migrate_v3_28.sql  nightly_delta.py  run.py
scripts/: apply_migrations.sh  baseline_migration_ledger.sh  check_restore_rehearsal_status.sh  cleanup.sh  deploy-hetzner-over-ssh.ps1  deploy_main.sh  deploy_v2.sh  launch-edfinder-dev.ps1  migrate_postgis.sh  nginx_snippet.md  nightly_update.sh  package_frontend_bundle.sh  reconcile_no_body_ratings.py  refresh_map_mviews.sh  rehearse_postgres_restore.sh  release-main-to-prod.ps1  repair_body_contract.py  repair_body_ring_association_status.py  repair_eddn_ring_identity.py  repair_ratings_score_breakdown_null.py  repair_station_body_links.py  restore_postgres_backup.sh  run_canonical_safety_tests.sh  run_data_invariants_receipted.sh  run_dirty_ratings_if_needed.sh  run_import.sh  run_station_enrichment_guarded.sh  seed_check.sh  station_enrichment_guard.py  station_enrichment_status.py  sync_password.sh  watch_grid.sh
shared_contracts/: __init__.py  data_invariant_contracts.py  enrichment_artifact_contracts.py  evidence_identity.py
sql/: 001_schema.sql  002_indexes.sql  003_functions.sql  004_ratings_v31.sql  005_map_indexes.sql  006_score_history.sql  007_profile_sync.sql  008_body_filter_aggregates.sql  009_map_materialised_views.sql  010_sync_key_scoping.sql  011_autocomplete_index.sql  012_topology_tables.sql  013_archetype_scores.sql  014_archetype_mv.sql  015_simulation_engine.sql  016_regional_analysis.sql  017_observed_facts.sql  018_observed_facts_stage6a.sql  019_nullable_coords.sql  020_rating_version.sql  021_station_body_links.sql  022_rating_dirty_triggers.sql  023_station_data_provenance.sql  024_body_rings.sql  025_eddn_ring_identity.sql  026_enrichment_staging_foundation.sql  027_station_external_identity.sql  028_add_dodec_station_type.sql  029_create_source_runs.sql  030_evidence_store_foundation.sql  030_r1_canonical_body_evidence.sql  031_eddn_ring_identity_hardening.sql  032_journal_import_staging.sql  033_body_data_contract_hardening.sql  034_station_body_link_contract_hardening.sql  035_nullable_population.sql  036_evidence_record_lifecycle.sql  037_canonical_app_data_evidence_source.sql  038_admin_job_runs.sql  039_body_ring_status_trigger_hardening.sql  (+5 more)
test_reports/: iteration_1.json
tests/: conftest.py  requirements-ci.txt  smoke_test_slots.py  test_admin_cache_truthfulness.py  test_admin_cron_status.py  test_admin_operations.py  test_admin_runtime_contracts.py  test_api_package_contract.py  test_artifact_utils.py  test_backfill_station_body_links.py  test_backup_restore_ops.py  test_body_contract_progress_logging.py  test_body_data_contracts.py  test_body_hierarchy_sort.py  test_body_ring_enrichment_plan.py  test_body_ring_invariants.py  test_body_selector.py  test_bounded_hygiene_pass.py  test_build_clusters.py  test_ci_build_reproducibility_contracts.py  test_ci_data_invariants.py  (+150 more)
(+1298 files in other folders)
